--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <div class="questionText"></div>
         <div class="answerButtons"></div>
-        <div class="correctText"></div>
+        <div class="startButton"></div>
+        <p class="correctText"></p>
+        <p class="timer"></p>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="assets/js/script.js"></script>
     </body>
