--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
+        <p class="timer"></p>
         <div class="questionText"></div>
         <div class="answerButtons"></div>
         <div class="startButton"></div>
-        <p class="correctText"></p>
-        <p class="timer"></p>
+        <div class="correctText"></div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="assets/js/script.js"></script>
     </body>
