--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="answerButtons"></div>
         <div class="startButton"></div>
         <div class="correctText"></div>
+        <div class="highScoreInput"></div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="assets/js/script.js"></script>
     </body>
